kubernetes/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jc-sre-api
  namespace: jc-sre
  labels:
    app.kubernetes.io/name: jc-sre-databricks-api
    app.kubernetes.io/component: api
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: jc-sre-databricks-api
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
