kubernetes/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jc-sre-api
  namespace: jc-sre
  labels:
    app.kubernetes.io/name: jc-sre-databricks-api
    app.kubernetes.io/component: api
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: jc-sre.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: jc-sre-api
                port:
                  number: 80
